syntax = "proto3";

option go_package = "cse224/proj5/pkg/surfstore";

package surfstore;

import "google/protobuf/empty.proto";

service BlockStore {
    rpc GetBlock (BlockHash) returns (Block) {}

    rpc PutBlock (Block) returns (Success) {}

    rpc HasBlocks (BlockHashes) returns (BlockHashes) {}

    rpc GetBlockHashes (google.protobuf.Empty) returns (BlockHashes) {}
}

service MetaStore {
    rpc GetFileInfoMap(google.protobuf.Empty) returns (FileInfoMap) {}

    rpc UpdateFile(FileMetaData) returns (Version) {}

    rpc GetHashAddrMap(BlockHashes) returns (HashAddrMap) {}
    rpc GetBlockStoreAddrs(google.protobuf.Empty) returns (BlockStoreAddrs) {}
}

service RaftSurfstore {
    // raft
    rpc AppendEntries(AppendEntryInput) returns (AppendEntryOutput) {}
    rpc SendHeartbeat(google.protobuf.Empty) returns (Success) {}
    
    // metastore
    rpc GetFileInfoMap(google.protobuf.Empty) returns (FileInfoMap) {}
    rpc UpdateFile(FileMetaData) returns (Version) {}
    rpc GetHashAddrMap(BlockHashes) returns (HashAddrMap) {}
    rpc GetBlockStoreAddrs(google.protobuf.Empty) returns (BlockStoreAddrs) {}
   
    // testing interface
    rpc GetInternalState(google.protobuf.Empty) returns (RaftInternalState) {}
}

message BlockHash {
    string hash = 1;
}

message BlockHashes {
    repeated string hashes = 1;
}

message Block {
    bytes blockData = 1;
    int32 blockSize = 2;
}

message Success {
    bool flag = 1;
}

message FileMetaData {
    string filename = 1;
    int32 version = 2;
    repeated string blockHashList = 3;
}

message FileInfoMap {
    map<string, FileMetaData> fileInfoMap = 1;
}

message Version {
    int32 version = 1;
}

message HashAddrMap {
    map<string, string> hashAddrMap = 1;
}

message BlockStoreAddrs {
    repeated string blockStoreAddrs = 1;
}

message AppendEntryInput {
    int64 term = 1;
    int64 prevLogIndex = 2;
    int64 prevLogTerm = 3;
    repeated UpdateOperation entries = 4;
    int64 leaderCommit = 5;
}

message AppendEntryOutput {
    int64 serverId = 1;
    int64 term = 2;
    bool success = 3;
    int64 matchedIndex = 4;
}

message RequestVoteInput {
    int64 term = 1;
    int64 candidateId = 2;
    int64 lastLogIndex = 3;
    int64 lastLogTerm = 4;
}

message RequestVoteOutput {
    int64 serverId = 1;
    int64 term = 2;
    bool voteGranted = 3;
}

message UpdateOperation {
    int64 term = 1;
    FileMetaData fileMetaData = 3;
}

message RaftInternalState {
    int64 state = 1;
    int64 term = 2;
    repeated UpdateOperation log = 3;
    FileInfoMap metaMap = 4;
}
